--- a/raul.html
+++ b/raul.html
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1>Lista de libros</h1>
-    <ol type="i"></ol>
+    <ol type="i"></ol>  
+        <li>El señor de los anillos</li>
+        <li>Harry Potter</li>
+        <li>El Quijote</li>
 </body>
 </html>
